Fixed the homepage cards (text-overflow)

--- a/styles/homepage/cards.module.css
+++ b/styles/homepage/cards.module.css
@@ -159,7 +159,7 @@
   }
 }
 
-@media screen and (min-width: 1800px) {
+@media screen and (min-width: 2100px) {
   .Eventsname {
     font-size: 70px;
   }
